*** netmeta, version 0.9-1, 2016-mm-dd ***

 ** Major changes **

  * Number of studies can be added to network graph
  
  * shadowtext() from TeachingDemos package by Greg Snow added to
    netmeta package
  
 ** User-visible changes **

  * netgraph():
  - new arguments to add number of studies to network graph
    (number.of.studies, cex.number.of.studies, col.number.of.studies,
     bg.number.of.studies)   
  - plastic look retained for highlighted comparisons

  * Help pages updated:
    decomp.design(), print.decomp.design(),
    netgraph(), netheat(), netmeasures()
    
 ** Internal changes **

  * New function:
    - shadowtext() to print number of studies


2016-04-26, version 0.9-0

New functions:
- netdistance (calculate distance matrix; replacement for internal
  function nodedist)
- netconnection (Get connectivity information for network)
- print.netconnection (corresponding print function)

Internal function nodedist removed (replaced by netdistance function)

Import functions from R package rgl (for 3-D plots)

New dataset Woods2010 (use long format in pairwise function)

Function netmeta:
- check connectivity of network and stop with informative error
  message if network is not fully connected
- new list components:
  'Cov.fixed' (variance-covariance matrix for fixed effect model)
  'Cov.random' (variance-covariance matrix for random effects model)

Function pairwise:
- extension to long data format (see example on help page)

Function netmeta:
- new arguments 'dim', 'eig3', and 'zpos' to generate 3-D network
  plots

Function stress (used internally):
- extension to generate 3-D network plots
- use netdistance function instead of nodedist

Function nma.ruecker (used internally):
- use of netmeta function does not result in an error for networks
  without heterogeneity / inconsistency, i.e. networks with zero
  degrees of freedom (e.g. a star-shaped network with only a single
  study for each comparison; simple example: single comparisons A-B,